# justified-mono-traversable

./: .gitignore  CHANGELOG.md  README.md  justified-mono-traversable.cabal  package.yaml
justified-mono-traversable/Data/Containers/: Justified.hs
src/Data/Containers/: Justified.hs
